<resources>
    <string name="app_name">Course</string>
    <string name="btn_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nombre</string>
    <string name="image_login">imageLogin</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="register">Crear cuenta</string>
    <string name="create_user">Crear</string>
    <string name="create_account">Crea una Cuenta</string>
</resources>